--- a/react-front-end/index.html
+++ b/react-front-end/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Whiff Punish</title>
   </head>
   <body>
     <div id="root" class="max-w-7xl mx-auto font-mono"></div>
