--- a/react-front-end/index.html
+++ b/react-front-end/index.html
@@ -6,7 +6,7 @@
     <title>Whiff Punish</title>
   </head>
   <body>
-    <div id="root" class="max-w-7xl mx-auto font-mono"></div>
+    <div id="root" class="max-w-7xl mx-auto font-mono @container/root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
